<resources>
    <string name="app_name">Pause And Play</string>
    <string name="title_activity_maps">Map</string>
    <string name="start_button_text">START</string>
    <string name="change_language_title">The language and region of the game will change</string>
    <string name="change_language_message">The whole game will be in Spanish and you will play with songs that are popular in Spain.</string>
    <string name="ok_button_text" translatable="false">OK</string>
    <string name="cancel_button_text">CANCEL</string>
    <string name="points">Points:</string>
    <string name="who_do_you_wanna_play_with">Who do you wanna play with?</string>
    <string name="explanation_current_mode">The game will be based on songs taken from the weekly sales data for the last few weeks.</string>
    <string name="explanation_classic_mode">The game will be based on songs that have been popular over the last 50 years.</string>
    <string name="solve">SOLVE !</string>
    <string name="artist_of_the_song">Artist of the song</string>
    <string name="input_requirements">Only capital A-Z, \' and spaces.</string>
    <string name="title_of_the_song">Title of the song</string>
    <string name="solve_activity_title">Solving the game...</string>
    <string name="incorrect">It\'s not correct. Sorry.</string>
    <string name="master_says">" says..."</string>
    <string name="exit_solving">Do you really wanna return to the map? It will be counted as another solving mistake more.</string>
    <string name="ok_exit_solving">YES! I HAVE NO IDEA</string>
    <string name="cancel_exit_solving">WELL, I\'LL KEEP TRYING</string>
</resources>
