<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true"
    tools:context=".WhoSaidThatActivity">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/coordinatorLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        tools:layout_editor_absoluteX="-4dp">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            android:elevation="4dp"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:elevation="4dp"
            android:gravity="right"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/masterMenuImageView"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:elevation="4dp"
                android:padding="5dp"
                android:scaleType="fitEnd"
                android:src="@drawable/play_master" />

            <Space
                android:layout_width="15dp"
                android:layout_height="match_parent" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/artistEditTextLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="10dp"
                android:hint="@string/artist_of_the_song"
                app:boxStrokeColor="@color/colorPrimaryDark"
                app:counterEnabled="true"
                app:counterMaxLength="10"
                app:helperText="@string/input_requirements"
                app:helperTextEnabled="true"
                app:hintTextColor="@color/colorPrimaryDark">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/artistEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:capitalize="characters"
                    android:freezesText="false"
                    android:inputType="textCapCharacters" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/titleEditTextLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="10dp"
                android:hint="@string/title_of_the_song"
                app:boxStrokeColor="@color/colorPrimaryDark"
                app:counterEnabled="true"
                app:counterMaxLength="10"
                app:helperText="@string/input_requirements"
                app:helperTextEnabled="true"
                app:hintTextColor="@color/colorPrimaryDark">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/titleEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:capitalize="characters"
                    android:freezesText="false"
                    android:inputType="textCapCharacters" />

            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:gravity="right"
                android:orientation="horizontal">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/solveButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/solve"
                    android:textColor="@color/colorOnSecondary"
                    app:backgroundTint="@color/colorSecondary"
                    app:icon="@drawable/star_solve"
                    app:iconTint="@color/colorOnSecondary"
                    app:rippleColor="@color/colorSecondary" />
            </LinearLayout>
        </LinearLayout>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</androidx.constraintlayout.widget.ConstraintLayout>