<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="15dp"
            android:padding="3dp"
            android:text="@string/who_do_you_wanna_play_with"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textAppearance="@style/Widget.MaterialComponents.TextView"
            android:textColor="@color/colorOnPrimary"
            android:textSize="20sp" />


        <com.google.android.material.card.MaterialCardView
            android:id="@+id/currentMaterialCard"
            android:layout_width="match_parent"
            android:layout_height="155dp"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/mtrl_card_spacing"
            android:layout_marginTop="@dimen/mtrl_card_spacing"
            android:layout_marginRight="@dimen/mtrl_card_spacing"
            android:minHeight="200dp"
            app:cardBackgroundColor="#FFFFFF">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:background="@color/colorPrimary"
                    app:srcCompat="@drawable/play_master" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="15dp"
                        android:padding="3dp"
                        android:text="Play"
                        android:textAlignment="textStart"
                        android:textAllCaps="false"
                        android:textAppearance="@style/Widget.MaterialComponents.TextView"
                        android:textColor="@color/colorOnPrimary"
                        android:textSize="36sp" />

                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:layout_marginEnd="15dp"
                        android:layout_marginBottom="10dp"
                        android:padding="3dp"
                        android:text="@string/explanation_current_mode"
                        android:textAlignment="textStart"
                        android:textAllCaps="false"
                        android:textAppearance="@style/Widget.MaterialComponents.TextView"
                        android:textColor="@color/colorSecondaryDark"
                        android:textSize="15sp" />

                </LinearLayout>
            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/classicMaterialCard"
            android:layout_width="match_parent"
            android:layout_height="155dp"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/mtrl_card_spacing"
            android:layout_marginTop="@dimen/mtrl_card_spacing"
            android:layout_marginRight="@dimen/mtrl_card_spacing"
            android:minHeight="200dp"
            app:cardBackgroundColor="#FFFFFF">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:background="@color/colorPrimary"
                    app:srcCompat="@drawable/pause_master" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="15dp"
                        android:padding="3dp"
                        android:text="Pause"
                        android:textAlignment="textStart"
                        android:textAllCaps="false"
                        android:textAppearance="@style/Widget.MaterialComponents.TextView"
                        android:textColor="@color/colorOnPrimary"
                        android:textSize="36sp" />

                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:layout_marginEnd="15dp"
                        android:layout_marginBottom="10dp"
                        android:padding="3dp"
                        android:text="@string/explanation_classic_mode"
                        android:textAlignment="textStart"
                        android:textAllCaps="false"
                        android:textAppearance="@style/Widget.MaterialComponents.TextView"
                        android:textColor="@color/colorSecondaryDark"
                        android:textSize="15sp" />

                </LinearLayout>
            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>


    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>